# alt1-linux

./: .gitignore
opencv/: basic_ocr  contour.cpp  ocr.cpp  run.bash  test.cpp  test2.cpp
opencv/code/: contour.cpp  corners.cpp  image_find.cpp  screen2.cpp  screenshot.cpp  test.cpp  treshold.cpp  xp_drop.cpp  xp_drop2.cpp
opencv/code/include/: CIEDE2000.cpp  CIEDE2000.h  dbscan.cpp  dbscan.h  loguru.cpp  loguru.hpp
opencv/code/old/: contour.cpp  test.cpp
opencv/code/test/: morph.cpp
opencv/images/cutout/: 158.psd  32_xbonus.psd  3xx.psd  6xp.psd  70_2.psd  89.psd
revery-quick-start/: .gitignore  package.json
revery-quick-start/esy.lock/: index.json
revery-quick-start/src/: App.re  Config.re  DisplayPreview.re  GlobalState.re  Helpers.re  Loading.re  NativeHelpers.re  Router.re  SelectWindow.re  State.re  Styles.re  Theme.re  Types.re  dune  get_windows.cpp
revery-quick-start/src/router/: ReRouter.re  Router.re
revery-quick-start/src/routes/: AppMenu.re  DisplayPreview.re  HallTracker.re  SelectWindow.re
revery-quick-start/src/state/: GlobalState.re  State.re
revery-quick-start/stubs/: Helpers.re  Stubs.re  dune  get_windows.cpp  screenshot_window.cpp
revery-quick-start/stubs/config/: discover.re
