(executable
    (name App)
    (package App)
    (preprocess (pps brisk-reconciler.ppx))
    (public_name App)
    (libraries bigarray Revery)
    (flags -g)
    (foreign_stubs (language cxx)
        (names get_windows screenshot_window)
        (flags -Wall -Wextra -Werror --std=c++14 (:include c_flags.sexp) (:include c_library_flags.sexp))
    )
)

(rule
(targets c_flags.sexp c_library_flags.sexp)
(deps (:discover config/discover.exe))
(action (run %{discover})))
